golang-scraper/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-scraper
  namespace: golang-scraper
  labels:
    app: golang-scraper
spec:
  selector:
    app: golang-scraper
  ports:
    - name: metrics
      port: 8080
      targetPort: metrics
