golang-scraper/k8s/network-policy.yaml
# Default deny all ingress and egress for the golang-scraper namespace
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: golang-scraper
spec:
  endpointSelector: {}
  ingress:
    # Allow kubelet probes (liveness and readiness)
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress: []
---
# Allow Prometheus to scrape metrics from the scraper pod
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-scrape
  namespace: golang-scraper
spec:
  endpointSelector:
    matchLabels:
      app: golang-scraper
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
---
# Allow egress to the Golang Scrapper API (HTTPS)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-golang-scraper-api
  namespace: golang-scraper
spec:
  endpointSelector:
    matchLabels:
      app: golang-scraper
  egress:
    - toFQDNs:
        - matchName: "hacker-news.firebaseio.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
# Allow DNS
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-dns
  namespace: golang-scraper
spec:
  endpointSelector:
    matchLabels:
      app: golang-scraper
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
